made: swagger documentation for register and login handlers made: example(default) info for user for swagger UI
