# auth_service/internal/entity/user.go
@@ -1,9 +1,9 @@
 package entity
 
 type User struct {
-	ID       string `json:"id"`
-	Username string `json:"username"`
-	Email    string `json:"email"`
-	Phone    string `json:"phone"`
-	Password string `json:"password"`
+	ID       string `json:"id" example:"1234"`
+	Username string `json:"username" example:"user_1234"`
+	Email    string `json:"email" example:"user_1234@gmail.com"`
+	Phone    string `json:"phone" example:"89178298123"`
+	Password string `json:"password" example:"pass_1234"`
 }
