# auth_service/internal/handlers/auth_handlers.go
@@ -21,33 +21,58 @@ func NewUserServer(userStorage database.UserStorage) *UserServer {
 	return &UserServer{userStorage: userStorage}
 }
 
+// @Summary Register user
+// @Description register user by credentials
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param user body entity.User true "user to register"
+// @Success 201 {object} entity.AuthResponse
+// @Failure 400 {object} entity.ErrorResponse
+// @Failure 500 {object} entity.ErrorResponse
+// @Router /register [post]
 func (us *UserServer) RegisterHandler(ctx *gin.Context) {
 	var newUser entity.User
 	if err := ctx.BindJSON(&newUser); err != nil {
 		log.Printf("unable to parse user from JSON: %s\n", err)
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "invalid user's data"})
 		return
 	}
 	newUser.ID = uuid.New().String()
 	if err := us.userStorage.Post(newUser); err != nil {
 		log.Println(err)
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "unable to post new user"})
 		return
 	}
 	ctx.JSON(http.StatusCreated, gin.H{"message": "User registered successfully", "id": newUser.ID})
 }
 
+// @Summary Login user
+// @Description login user by credentials
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param user body entity.User true "user to login"
+// @Success 200 {object} entity.AuthResponse
+// @Failure 400 {object} entity.ErrorResponse
+// @Failure 500 {object} entity.ErrorResponse
+// @Router /login [post]
 func (us *UserServer) LoginUser(ctx *gin.Context) {
 	var user entity.User
 	if err := ctx.BindJSON(&user); err != nil {
 		log.Printf("unable to read user from context for login: %s\n", err)
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "invalid user's data"})
 		return
 	}
 	userFromDB, err := us.userStorage.Get(user.Username)
 	if err != nil {
-		log.Println(err)
+		log.Printf("unable to find user in database: %s", err)
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "User isn't registered"})
 		return
 	}
 	if user.Password != userFromDB.Password {
 		log.Printf("incorrect password")
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "incorrect password"})
 		return
 	}
 	payload := jwt.MapClaims{
@@ -61,7 +86,7 @@ func (us *UserServer) LoginUser(ctx *gin.Context) {
 		return
 	}
 	token := jwt.NewWithClaims(jwt.SigningMethodHS256, payload)
-	jwtTokenString, err := token.SignedString(jwtSecret)
+	jwtTokenString, err := token.SignedString([]byte(jwtSecret))
 	if err != nil {
 		log.Printf("unable to sign jwt token: %s", err)
 		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "internal server error"})
